--- a/src/Pages/Shared/Navbar/Navbar.css
+++ b/src/Pages/Shared/Navbar/Navbar.css
@@ -15,3 +15,28 @@ li {
   color: white;
   background-color: #FF3811;
 }
+
+.Sbutton {
+  border: 1.5px solid #FF3811;
+  padding: 10px 30px;
+  border-radius: 5px;
+  color: #FF3811;
+  font-weight: 500;
+  font-size: 20px;
+  color: white;
+  background-color: #FF3811;
+}
+
+.Obutton {
+  border: 1.5px solid white;
+  padding: 10px 30px;
+  border-radius: 5px;
+  color: white;
+  font-weight: 500;
+  font-size: 20px;
+}
+
+.Obutton:hover {
+
+  background-color: #FF3811;
+}
